# meteo

./: readme.md
data_logger/: Cargo.toml  deploy.sh  rust-toolchain.toml  sql.sql
data_logger/.cargo/: config.toml
meteo/: Cargo.toml  build.rs  build_helpers.rs  config.toml.template  readme.md  rust-toolchain.toml
meteo/.cargo/: config.toml
meteo/src/: lib.rs  network.rs  ntp_client.rs  sensor.rs  spi_helper.rs  utils.rs
